2014-02-03  Dan Bernstein  <mitz@apple.com>

        More iOS build fixing.

        * Misc/WebNSStringDrawing.mm:
        (-[NSString __web_drawAtPoint:forWidth:withFont:ellipsis:letterSpacing:includeEmoji:measureOnly:renderedStringOut:drawUnderline:]):
        (-[NSString __web_drawInRect:withFont:ellipsis:alignment:letterSpacing:lineSpacing:includeEmoji:truncationRect:measureOnly:renderedStringOut:drawUnderline:]):

2014-01-31  Ryosuke Niwa  <rniwa@webkit.org>

        Remove inline member functions of FrameSelection that access m_selection
        https://bugs.webkit.org/show_bug.cgi?id=127986

        Reviewed by Enrica Casucci.

        * WebCoreSupport/WebFrameIOS.mm:
        (-[WebFrame extendSelection:]):
        (-[WebFrame ensureRangedSelectionContainsInitialStartPoint:initialEndPoint:]):
        (-[WebFrame aggressivelyExpandSelectionToWordContainingCaretSelection]):
        (-[WebFrame expandSelectionToSentence]):
        (-[WebFrame setBaseWritingDirection:]):
        (-[WebFrame smartExtendRangedSelection:]):

2014-01-30  Andrei Bucur  <abucur@adobe.com>

        Remove the ACCELERATED_COMPOSITING flag
        https://bugs.webkit.org/show_bug.cgi?id=127833

        Reviewed by Antti Koivisto.

        Remove the USE(ACCELERATED_COMPOSITING) conditionals from the code base and make AC
        mandatory.

        * WebCoreSupport/WebChromeClientIOS.h:
        * WebCoreSupport/WebChromeClientIOS.mm:
        (WebChromeClientIOS::attachRootGraphicsLayer):
        * WebView/WebUIKitDelegate.h:

2014-01-27  Joseph Pecoraro  <pecoraro@apple.com>

        Unreviewed iOS build fix. FALLTHROUGHs for iOS.

        * Misc/WebNSStringDrawing.mm:
        (needsBidiLayout):

2014-01-27  Andy Estes  <aestes@apple.com>

        Scrub WebKit API headers of WTF macros
        https://bugs.webkit.org/show_bug.cgi?id=127706

        Reviewed by David Kilzer.

        * WebCoreSupport/WebMIMETypeRegistry.h: Changed PLATFORM(IOS) to
        TARGET_OS_IPHONE.
