@@ -1,3 +1,11 @@
+2014-02-08  Ryosuke Niwa  <rniwa@webkit.org>
+
+        Build fix after r163739.
+
+        * WebCoreSupport/WebFrameIOS.mm:
+        (-[WebFrame collapseSelection]):
+        (-[WebFrame aggressivelyExpandSelectionToWordContainingCaretSelection]):
+
 2014-02-03  Dan Bernstein  <mitz@apple.com>
 
         More iOS build fixing.
